# orga

./: .env.example  .gitignore  README.md
backend/: README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  logging.py  main.py  middleware.py  request_context.py
backend/app/routers/: health.py
backend/tests/: test_health.py
docs/: INSTRUCTIONS.md  roadmap.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: health.test.ts
frontend/src/components/ui/: button.tsx
frontend/src/lib/: env.ts
frontend/src/pages/: Health.tsx
scripts/: dev_down.ps1  dev_up.ps1  seed.ps1  smoke.ps1  test.ps1
