[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orga-backend"
version = "0.1.0"
requires-python = ">=3.10"
description = "Orga.com backend (FastAPI skeleton)"
readme = "../README.md"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["I", "B", "E", "F", "UP", "SIM"]
exclude = ["alembic/versions/*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=backend --cov-report=xml"
testpaths = ["backend/tests"]
